package pt.isep.psoft.aisafe.domain;

public enum AirportType {
    INTERNATIONAL,
    REGIONAL,
    DOMESTIC
}